--- a/Virtualization2.html
+++ b/Virtualization2.html
@@ -5,10 +5,10 @@
     <title>Ma Première Page Web</title>
     <style type="text/css">
     body{
-      background-color: #e3f9f6;
-      margin-left: 10%;
-      margin-right: 10%;
-      border: 2px dotted black;
+      background-color: #0000ff;
+      margin-left: 15%;
+      margin-right: 15%;
+      border: 4px dotted black;
       padding: 10px 10px 10px 10px;
       font-family: sans-serif;
     }
